--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==20.3.0
 Authlib==0.15.2
 awscli==1.18.193
 Babel==2.9.0
+blinker==1.4
 botocore==1.19.33
 certifi==2020.12.5
 cffi==1.14.4
@@ -18,10 +19,12 @@ ecdsa==0.14.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.7
+Flask-Ext==0.1
 Flask-Migrate==2.5.3
 Flask-Moment==0.11.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+Flask-Testing==0.8.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.10
