--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ export TEST_DATABASE_URL = "postgresql://localhost/macro_test"
 export AUTH0_CLIENT_ID= 'zeu5Q4B8xrU7BymT7dxwW7VTh6To2chH'
 export AUTH0_DOMAIN='fnsd-gmc.us.auth0.com'
 export AUTH0_AUDIENCE='Macros'
-export AUTH0_CALLBACK_URL='http://localhost:5000/callback'
+export AUTH0_CALLBACK_URL='https://gage-heroku-app.herokuapp.com/callback'
 export ENV='development'
 export FLASK_APP=app
 export FLASK_DEBUG=True
